--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                         <img src="images/img3.jpg" alt="">
                         <div class="text">Personal Portfolio</div>
                         <p>A personal website build using HTML, CSS, Js.<br><br>
-                            <a href="#" target="_blank">Link</a>
+                            <a href="https://vineet-jakhar.github.io/Personal-Website/" target="_blank">Link</a>
                         </p>
                     </div>
                 </div>
